test/corpus/arrayRule2.txt
================================================================================
Array Rule 2
================================================================================

{
  "source": ["aws.cloudwatch"],
  "detail-type": ["CloudWatch Alarm State Change"],
  "detail": {
    "state": {
      "value": ["ALARM"]
    },
    "configuration": {
      "metrics": {
        "metricStat": {
          "metric": {
            "metricName": ["CPUUtilization"]
          }
        }
      }
    }
  }
}

--------------------------------------------------------------------------------

(document
  (object
    (pair
      (rule_value_matching
        (rule_constant_value
          (string_content))
        (array
          (string
            (string_content)))))
    (pair
      (rule_value_matching
        (rule_constant_value
          (string_content))
        (array
          (string
            (string_content)))))
    (pair
      (string
        (string_content))
      (object
        (pair
          (string
            (string_content))
          (object
            (pair
              (rule_value_matching
                (rule_constant_value
                  (string_content))
                (array
                  (string
                    (string_content)))))))
        (pair
          (string
            (string_content))
          (object
            (pair
              (string
                (string_content))
              (object
                (pair
                  (string
                    (string_content))
                  (object
                    (pair
                      (string
                        (string_content))
                      (object
                        (pair
                          (rule_value_matching
                            (rule_constant_value
                              (string_content))
                            (array
                              (string
                                (string_content)))))))))))))))))
