test/corpus/arrayRule3.txt
================================================================================
Array Rule 3
================================================================================

{
  "metrics": {
    "metricName": ["CPUUtilization"],
    "namespace": ["AWS/ES"]
  }
}

--------------------------------------------------------------------------------

(document
  (object
    (pair
      (string
        (string_content))
      (object
        (pair
          (rule_value_matching
            (rule_constant_value
              (string_content))
            (rule_value_array
              (string
                (string_content)))))
        (rule_value_matching
          (rule_constant_value
            (string_content))
          (rule_value_array
            (string
              (string_content))))))))
